<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_interval"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/update_interval_description"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <RadioGroup
        android:id="@+id/interval_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/description_text">

        <RadioButton
            android:id="@+id/radio_1min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_1_minute" />

        <RadioButton
            android:id="@+id/radio_5min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_5_minutes" />

        <RadioButton
            android:id="@+id/radio_15min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_15_minutes" />

        <RadioButton
            android:id="@+id/radio_30min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_30_minutes" />

        <RadioButton
            android:id="@+id/radio_1hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/every_1_hour" />

        <RadioButton
            android:id="@+id/radio_2hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_2_hours" />

        <RadioButton
            android:id="@+id/radio_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_only" />
    </RadioGroup>

    <TextView
        android:id="@+id/warning_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update_interval_warning"
        android:textColor="@color/design_default_color_error"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/interval_radio_group" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warning_text" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout> 